tests/golden/expected/example6.stdout.txt
Compile error: tests/fixtures/example6.lamp:9: type error: field "version" expects int, got string
  9 | 	game.all.first.version = "illegal"
    |  ^
